<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SocialSharing</string>
    <string name="text_home">This is just example of using <b>Simple Social Sharing</b> project\n\nYou can see right design of sharing here - <a href="">http://www.androidpatterns.com/uap_pattern/share-button</a></string>
    <!-- Facebook events -->
    <string name="toast_facebook_auth_success">Facebook authentication is successful</string>
    <string name="toast_facebook_auth_fail">Error was occurred during Facebook authentication</string>
    <string name="facebook_post_published">Posted to Facebook successfully</string>
    <string name="facebook_post_publishing_failed">Post publishing was failed</string>
    <string name="facebook_logged_out">You are logged out</string>
    <!-- Twitter events -->
    <string name="toast_twitter_auth_success">Twitter authentication is successful</string>
    <string name="toast_twitter_auth_fail">Error was occurred during Twitter authentication</string>
    <string name="twitter_post_published">Tweeted successfully</string>
    <string name="twitter_post_publishing_failed">Tweet failed</string>
    <string name="twitter_logged_out">You are logged out</string>
    <!-- Text and labels -->
    <string name="share_message_title">Message</string>
    <string name="button_facebook_post">Post on Facebook</string>
    <string name="button_facebook_post_image">Post image on Facebook</string>
    <string name="button_twitter_post">Post on Twitter</string>
    <string name="button_share_facebook">Share on Facebook</string>
    <string name="button_share_twitter">Share on Twitter</string>
    <string name="menu_logout">Logout</string>

</resources>