<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/title_message"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="12dip"
        android:paddingLeft="12dip"
        android:paddingTop="12dip"
        android:text="@string/share_message_title"
        android:textSize="20sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/message"
        android:layout_width="fill_parent"
        android:layout_height="150dip"
        android:layout_margin="5dip"
        android:gravity="left|top" />

    <RelativeLayout
        android:id="@+id/message_addition"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginBottom="10dip"
        android:layout_marginTop="20dip" >

        <ImageView
            android:id="@+id/fb_thumb"
            android:layout_width="70dip"
            android:layout_height="70dip"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_margin="10dip"
            android:adjustViewBounds="true"
            android:src="@drawable/ic_app" />

        <TextView
            android:id="@+id/link_name"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_marginBottom="10dip"
            android:layout_toRightOf="@id/fb_thumb"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/link_description"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@id/link_name"
            android:layout_toRightOf="@id/fb_thumb" />
    </RelativeLayout>

    <Button
        android:id="@+id/button_post"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="20dip"
        android:layout_marginRight="20dip"
        android:padding="10dip"
        android:text="@string/button_facebook_post" />

    <Button
        android:id="@+id/button_post_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="20dip"
        android:layout_marginRight="20dip"
        android:layout_marginTop="20dip"
        android:padding="10dip"
        android:text="@string/button_facebook_post_image" />

</LinearLayout>